kubernetes up and running/kuard/deployment/bandicoot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandicoot-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      ver: "2"
      app: bandicoot
      env: prod
  template:
    metadata:
      labels:
        ver: "2"
        app: bandicoot
        env: prod
    spec:
      containers:
      - name: kuar-demo
        image: gcr.io/kuar-demo/kuard-amd64:green
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
