kubernetes up and running/kuard/deployment/kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: kuard
spec: 
  volumes:
    # hostPath volume to have access to the underlying host filesystem
    - name: "kuard-data"
      hostPath:
        path: "var/lib/kuard"

    # persistent volume
    # - name: "test"
    #   persistentVolumeClaim:
    #     claimName: "claim-name-test"

    # emptyDir volume to work with cache purposes
    # - name: "cache-volume"
    #   emptyDir:
    #     sizeLimit: 1G
  containers: 
    - image: kubernetes-book-kuard:latest
      imagePullPolicy: Never
      name: kuard
      volumeMounts:
        - mountPath: "/data"
          name: "kuard-data"
      resources:
        requests:
          cpu: "500m"
          memory: "128Mi"
        limits:
          cpu: "1000m"
          memory: "256Mi"
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        failureThreshold: 3
        periodSeconds: 10
        timeoutSeconds: 1
