kubernetes up and running/kuard/deployment/alpaca-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpaca-loadbalancer-service
spec:
  selector:
    ver: "1"
    app: alpaca
    env: prod
  type: LoadBalancer
  ports:
  - port: 12343
    targetPort: 8080
    nodePort: 30033
